kubernetes/apps/default/node-red/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels: &labels
    app.kubernetes.io/part-of: node-red
    app.kubernetes.io/name: node-red
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: node-red-data
        - name: config
          configMap:
            name: node-red-config
      containers:
        - name: node-red
          image: nodered/node-red:3.1
          imagePullPolicy: Always
          ports:
            - containerPort: 1880
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/settings.js
              subPath: settings.js
              readOnly: true
