kubernetes/apps/default/node-red/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  labels:
    app.kubernetes.io/instance: node-red
    app.kubernetes.io/name: node-red
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: node-red
    app.kubernetes.io/name: node-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
